# ataraxy

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/simple_commands/: Cargo.toml
examples/simple_commands/src/: main.rs
macros/: Cargo.toml  README.md  Readme.md
macros/src/: lib.rs  utils.rs
macros/src/command/: actions.rs  mod.rs  params.rs
src/: lib.rs  macros.rs  numbers.rs  utils.rs
src/framework/: command.rs  context.rs  handler.rs  mod.rs
src/framework/command/: argument.rs  mod.rs
