[package]
name = "ataraxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", default-features=false, features = ["builder", "cache", "client", "gateway", "model", "unstable_discord_api"] }
ataraxy-macros = { path = "./macros" }
async-trait = "0.1"

[workspace]
members = ["macros"]
exclude = ["examples"]

[features]
default = ["serenity/rustls_backend"]
