[package]
name = "ataraxy"
description = "Discord slash commands framework for Serenity"
version = "0.1.0"
edition = "2018"
authors = ["Impossible Reality <impossible@impreality.ml>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ImpossibleReality/ataraxy"
keywords = ["discord", "macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", default-features=false, features = ["builder", "cache", "client", "gateway", "model", "unstable_discord_api"] }
ataraxy-macros = { path = "./macros" }
async-trait = "0.1"

[workspace]
members = ["macros"]
exclude = ["examples"]

[features]
default = ["serenity/rustls_backend"]
