[package]
name = "ataraxy_macros"
version = "0.1.0"
edition = "2018"
authors = ["kangalioo <jannik.a.schaper@web.de>", "Impossible Reality <impossible@impreality.ml>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.64", features = ["full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
darling = "0.12.2"
anyhow = "1.0"