[package]
name = "ataraxy-macros"
description = "Proc-macros for Ataraxy"
version = "0.1.1"
edition = "2018"
authors = ["Impossible Reality <impossible@impreality.ml>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ImpossibleReality/ataraxy"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.64", features = ["full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
darling = "0.13"
anyhow = "1.0"